# IWantToEat-AI

./: LICENSE  README.md  main.py  pyproject.toml
.streamlit/: secrets.toml  secrets.toml.example
