[project]
name = "iwanttoeat-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "google-genai>=1.69.0",
    "streamlit>=1.55.0",
    "streamlit-folium>=0.27.1",
    "streamlit-geolocation>=0.0.10",
]
